<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="12dp"
    app:cardCornerRadius="16dp"
    app:cardElevation="0dp"
    app:cardBackgroundColor="@color/white">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/iv_icon"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:src="@drawable/ic_launcher_foreground"
            app:tint="@color/expense_red"
            android:background="@drawable/bg_social_button"
            android:backgroundTint="@color/icon_red_bg"
            android:padding="12dp"/>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginStart="16dp"
            android:orientation="vertical">
            <TextView
                android:id="@+id/tv_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/grocery_store"
                android:textStyle="bold"
                android:textColor="@color/black"
                android:textSize="16sp"/>
            <TextView
                android:id="@+id/tv_date_category"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/today_time"
                android:textSize="14sp"
                android:textColor="@color/gray"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="end">
            <TextView
                android:id="@+id/tv_amount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/minus_8540"
                android:textStyle="bold"
                android:textColor="@color/expense_red"
                android:textSize="16sp"/>
            <TextView
                android:id="@+id/tv_category_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/food"
                android:textSize="12sp"
                android:textColor="@color/gray"
                android:layout_marginTop="2dp"/>
        </LinearLayout>
    </LinearLayout>
</androidx.cardview.widget.CardView>
